# hst_combo

./: .gitignore  LICENSE  README.md
Multi-human_Skeleton_RGBD/: CMakeLists.txt  README.md  package.xml
Multi-human_Skeleton_RGBD/msg/: HumanSkeleton.msg  MultiHumanSkeleton.msg
Multi-human_Skeleton_RGBD/scripts/: python_entrypoint.py
Multi-human_Skeleton_RGBD/skeleton_extractor/: Outlier_filter.py  config.py  rviz2_maker.py  skeleton2msg.py  skeleton_extractor_node.py  transform.py  utils.py
hst_node/: CMakeLists.txt  package.xml  pyproject.toml
hst_node/hst_infer/: __init__.py  data_buffer.py  evaluate_pickle.py  hst_infer_node.py  node_config.py
hst_node/hst_infer/human_scene_transformer/: infer.py
hst_node/hst_infer/human_scene_transformer/config/: hst_config.py
hst_node/hst_infer/human_scene_transformer/config/jrdb/: dataset_params.gin
hst_node/hst_infer/human_scene_transformer/jrdb/: dataset_params.py  input_fn.py  test_visualization.py
hst_node/hst_infer/human_scene_transformer/metrics/: metrics.py  pos_nll.py
hst_node/hst_infer/human_scene_transformer/model/: agent_encoder.py  agent_feature_encoder.py  model.py  model_params.py  preprocess.py  scene_encoder.py
hst_node/hst_infer/tests/: node_rosbag_playback.py  test.ipynb  test.py
hst_node/hst_infer/utils/: get_path.py  humanid_to_markerid.py  keypoints.py  logger.py  read_ros2bag.py  run_once.py  rviz2_marker.py  time_syncronization_res.txt  transform.py
hst_node/hst_net_param/ckpts/: ckpt-30.index  ckpt-30.tpu_compilation_cache
hst_node/hst_net_param/params/: operative_config.gin
hst_node/hst_net_param_no_keypoints/ckpts/: ckpt-30.autofdo_profile  ckpt-30.index
hst_node/hst_net_param_no_keypoints/params/: operative_config.gin
hst_node/launch/: hst_infer.launch  rviz.launch  socialnav_core.launch
hst_node/pedestrians_zara1/ckpts/: ckpt-20.autofdo_profile  ckpt-20.data-00000-of-00001  ckpt-20.index  ckpt-20.tpu_compilation_cache
hst_node/pedestrians_zara1/params/: operative_config.gin
hst_node/pickle/: evaluation_data.pkl
hst_node/rviz2/: hst_core.rviz
hst_node/scripts/: python_entrypoint.py
skeleton_interfaces/: CMakeLists.txt  package.xml
skeleton_interfaces/msg/: AgentTrajectory.msg  AgentTrajectoryArray.msg  HumanSkeleton.msg  MultiHumanSkeleton.msg  Predictions.msg  Trajectory.msg  TrajectoryPoint.msg
skeleton_interfaces/srv/: GetTrajectory.srv
skeleton_interfaces/utils/: skeleton2msg.py
social_controller/: package.xml  setup.cfg  setup.py
social_controller/scripts/: python_entrypoint.py
(+2 files in other folders)
